force-app/main/default/objects/Advisor_Firm__mdt/Advisor_Firm__mdt.object-meta.xml
<CustomObject>
    <label>Advisory Firm</label>
    <pluralLabel>Advisory Firms</pluralLabel>
</CustomObject>