force-app/main/default/objects/Advisor_Firm__mdt/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <label>CRD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>