force-app/main/default/objects/Advisor_Firm__mdt/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FIRM</fullName>
                <default>true</default>
                <label>FIRM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>