force-app/main/default/objects/Advisor_Firm__mdt/fields/NPN__c.field-meta.xml
<CustomField>
    <fullName>NPN__c</fullName>
    <label>NPN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>