force-app/main/default/objects/Advisor_Firm__mdt/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>